--- a/package.json
+++ b/package.json
@@ -4,10 +4,39 @@
   "license": "MIT",
   "scripts": {},
   "private": true,
-  "dependencies": {},
+  "dependencies": {
+    "@google-cloud/logging-winston": "^6.0.0",
+    "dayjs": "^1.11.10",
+    "express": "^4.19.2",
+    "tslib": "^2.3.0",
+    "winston": "^3.13.0"
+  },
   "devDependencies": {
+    "@nx/eslint": "18.2.2",
+    "@nx/eslint-plugin": "18.2.2",
+    "@nx/jest": "18.2.2",
     "@nx/js": "18.2.2",
     "@nx/workspace": "18.2.2",
-    "nx": "18.2.2"
+    "@swc-node/register": "~1.8.0",
+    "@swc/core": "~1.3.85",
+    "@swc/helpers": "~0.5.2",
+    "@types/express": "^4.17.21",
+    "@types/jest": "^29.4.0",
+    "@types/node": "18.16.9",
+    "@typescript-eslint/eslint-plugin": "^7.3.0",
+    "@typescript-eslint/parser": "^7.3.0",
+    "eslint": "~8.57.0",
+    "eslint-config-prettier": "^9.0.0",
+    "jest": "^29.4.1",
+    "jest-environment-node": "^29.4.1",
+    "nx": "18.2.2",
+    "prettier": "^2.6.2",
+    "ts-jest": "^29.1.0",
+    "ts-node": "10.9.1",
+    "typescript": "~5.4.2",
+    "verdaccio": "^5.0.4"
+  },
+  "nx": {
+    "includedScripts": []
   }
 }
