Updated scope of package

--- a/logger/package.json
+++ b/logger/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@symph-core-sdk-v2/logger",
+  "name": "@symphco/logger",
   "version": "0.0.1",
   "dependencies": {
     "tslib": "^2.3.0",
