--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "private": true,
   "dependencies": {
     "@google-cloud/logging-winston": "^6.0.0",
+    "@zapier/secret-scrubber": "^1.1.1",
     "dayjs": "^1.11.10",
     "express": "^4.19.2",
     "tslib": "^2.3.0",
